# BA-ARAP-NMA

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GITHUB_RELEASE_CHECKLIST.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VALIDATION_ENVIRONMENT.md  VALIDATION_REPORT.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: command_reference.md  installation.md  method_scope.md  output_files.md  reproducibility.md  two_state_analysis.md
examples/hcv_helicase/: run_example.ps1  run_example.sh
examples/hcv_helicase/expected_results/: README.md  best_structure_comparison.tsv  modal_space_analysis.tsv  modal_space_summary.tsv  view_best_structures.pml
examples/smoke_test/: README.md  run_smoke_test.ps1  run_smoke_test.sh
src/ba_arap_nma/: __init__.py
src/ba_arap_nma/analysis/: geometry.py  modal_space.py
src/ba_arap_nma/cli/: main.py
src/ba_arap_nma/core/: arap.py  ca_core.py  structure.py
src/ba_arap_nma/engine/: generation.py
src/ba_arap_nma/output/: fullatom.py  two_state.py  writers.py
tests/: test_algorithm.py  test_cli.py  test_metric_direct.py  test_outputs.py  test_release_cleanliness.py
