[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ba-arap-nma"
version = "1.0.0"
description = "Backbone-angle-compatible as-rigid-as-possible normal-mode analysis for amplitude-ordered protein structure generation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Zhenyu Zhang"},
  {name = "Dejian Liu"},
  {name = "Luyan Ma"}
]
dependencies = ["numpy>=1.23,<3", "scipy>=1.9,<2"]
keywords = ["protein", "normal mode analysis", "elastic network model", "structural bioinformatics"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
Homepage = "https://github.com/chriszyu9605/BA-ARAP-NMA"
Repository = "https://github.com/chriszyu9605/BA-ARAP-NMA"
Documentation = "https://github.com/chriszyu9605/BA-ARAP-NMA#readme"
Issues = "https://github.com/chriszyu9605/BA-ARAP-NMA/issues"
Releases = "https://github.com/chriszyu9605/BA-ARAP-NMA/releases"

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
ba-arap-nma = "ba_arap_nma.cli.main:main"

[tool.setuptools.packages.find]
where=["src"]

[tool.pytest.ini_options]
testpaths=["tests"]
